--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,14 @@ documentation = "http://alexcrichton.com/backtrace-rs"
 description = """
 A library to acquire a stack trace (backtrace) at runtime in a Rust program.
 """
-build = "build.rs"
-
 [dependencies]
 libc = "0.2"
 cfg-if = "0.1"
 rustc-demangle = "0.1.4"
 
 # Optionally enable the ability to serialize a `Backtrace`
-serde = { version = "0.8", optional = true }
+serde = { version = "1.0", optional = true }
+serde_derive = { version = "1.0", optional = true }
 rustc-serialize = { version = "0.3", optional = true }
 
 # Optionally demangle C++ frames' symbols in backtraces.
@@ -32,9 +31,6 @@ winapi = { version = "0.2.5", optional = true }
 
 [target.'cfg(all(unix, not(target_os = "emscripten"), not(target_os = "macos"), not(target_os = "ios")))'.dependencies]
 backtrace-sys = { path = "backtrace-sys", version = "0.1.3", optional = true }
-
-[build-dependencies]
-serde_codegen = { version = "0.8", optional = true }
 
 # Each feature controls the two phases of finding a backtrace: getting a
 # backtrace and then resolving instruction pointers to symbols. The default
@@ -88,4 +84,4 @@ default = ["libunwind", "libbacktrace", "coresymbolication", "dladdr", "dbghelp"
     #
     # Various features used for enabling rustc-serialize or syntex codegen.
     serialize-rustc = ["rustc-serialize"]
-    serialize-serde = ["serde", "serde_codegen"]
+    serialize-serde = ["serde", "serde_derive"]
