--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ backtrace-sys = { path = "backtrace-sys", version = "0.1.3", optional = true }
 # Note that not all features are available on all platforms, so even though a
 # feature is enabled some other feature may be used instead.
 [features]
-default = ["libunwind", "libbacktrace", "coresymbolication", "dladdr", "dbghelp", "cpp_demangle"]
+default = ["libunwind", "libbacktrace", "coresymbolication", "dladdr", "dbghelp"]
 
     #=======================================
     # Methods of acquiring a backtrace
